--- a/FeliCaProject/FeliCaProject/FeliCaProject.csproj
+++ b/FeliCaProject/FeliCaProject/FeliCaProject.csproj
@@ -65,6 +65,12 @@
       <DependentUpon>AttendanceManagementApplication.cs</DependentUpon>
     </Compile>
     <Compile Include="GetIDm.cs" />
+    <Compile Include="InMessage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InMessage.Designer.cs">
+      <DependentUpon>InMessage.cs</DependentUpon>
+    </Compile>
     <Compile Include="NewAccountForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,11 +85,20 @@
     <Compile Include="DropTablesForm.Designer.cs">
       <DependentUpon>DropTablesForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ShowTableForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShowTableForm.Designer.cs">
+      <DependentUpon>ShowTableForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AttendanceManagementApplication.resx">
       <DependentUpon>AttendanceManagementApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateDatabaseForm.resx">
       <DependentUpon>CreateDatabaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InMessage.resx">
+      <DependentUpon>InMessage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NewAccountForm.resx">
       <DependentUpon>NewAccountForm.cs</DependentUpon>
@@ -99,6 +114,9 @@
     </Compile>
     <EmbeddedResource Include="DropTablesForm.resx">
       <DependentUpon>DropTablesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ShowTableForm.resx">
+      <DependentUpon>ShowTableForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
